fix: line rendering and octree generator
- Line rendering fixed in all cases using the correct primitive
- Consistent coloring with both line render methods
- Octree generator now checks if Gaia distance is negative for
cross-matched stars. If so, the HIP distance is used instead.